# ha-data-service

./: .ghcid  .gitignore  CHANGELOG.md  Dockerfile  README.md  TALK_NOTES.md  hs-data-service.cabal  hs-user-mgr.cabal
.github/workflows/: build.yaml
app/: Main.hs
presentation/: boulder-haskell-meetup-2025.md  boulder-haskell-meetup-2025.md.backup
src/: Config.hs  DataService.hs  Handlers.hs  TickerLookup.hs  Types.hs
terraform/: locals.tf  main.tf  outputs.tf  providers.tf
test/: ConfigSpec.hs  DataServiceSpec.hs  HandlersSpec.hs  Spec.hs  TickerLookupSpec.hs  TypesSpec.hs
