cabal-version:      3.8
name:               hs-data-service
version:            0.1.0.0
license:            NONE
author:             Nic Flores
maintainer:         flores314@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -O2

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  Config
                    , Types
                    , TickerLookup
                    , DataService
                    , Handlers
    build-depends:    base ^>=4.18.3.0
                    , scotty
                    , text
                    , amazonka
                    , amazonka-s3
                    , amazonka-sts
                    , lens
                    , http-conduit
                    , http-types
                    , bytestring
                    , time
                    , aeson
                    , directory
    default-language: Haskell2010

executable hs-data-service
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
                    , hs-data-service
                    , scotty
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hs-data-service-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    TypesSpec
                    , ConfigSpec
                    , TickerLookupSpec
                    , DataServiceSpec
                    , HandlersSpec
    build-depends:    base ^>=4.18.3.0
                    , hs-data-service
                    , hspec
                    , hspec-wai
                    , text
                    , time
                    , aeson
                    , amazonka
                    , amazonka-s3
                    , bytestring
                    , filepath
                    , temporary
                    , http-types
                    , wai
                    , wai-extra
                    , scotty
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N